//! This module must be kept in sync with options.proto.

pub(super) const OBJECT_DIRECTIVES: u32 = 58301;
pub(super) const INPUT_OBJECT_DIRECTIVES: u32 = 58302;
pub(super) const OUTPUT_FIELD_DIRECTIVES: u32 = 58301;
pub(super) const INPUT_FIELD_DIRECTIVES: u32 = 58302;
pub(super) const ENUM_DIRECTIVES: u32 = 58301;
pub(super) const ENUM_VALUE_DIRECTIVES: u32 = 58301;

pub(super) const DEFAULT_TO_QUERY_FIELDS: u32 = 58301;
pub(super) const DEFAULT_TO_MUTATION_FIELDS: u32 = 58301;

pub(super) const DIRECTIVES: u32 = 58301;
pub(super) const IS_QUERY: u32 = 58302;
pub(super) const IS_MUTATION: u32 = 58303;
